# AppPilot

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  TOOL_SCHEMA.json  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
apppilot/: agent.py  browser_driver.py  cli.py  config.py  mcp_server.py  models.py  server.py  session_server.py  utils.py
dashboard/: app.js  index.html  style.css
scripts/: setup.sh
tests/: test_extract.py  test_models.py
