[project]
name = "apppilot"
version = "0.1.0"
description = "MCP Client capable of driving in-browser testing"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "AppPilot contributors" }]
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "websockets>=12.0",
    "playwright>=1.45",
    "httpx>=0.27",
    "pydantic>=2.8",
    "pydantic-settings>=2.3",
    "click>=8.1",
    "python-multipart>=0.0.9",
    "aiofiles>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
apppilot = "apppilot.cli:main"
ap = "apppilot.cli:main"
apppilot-mcp = "apppilot.mcp_server:main"

[tool.setuptools]
packages = ["apppilot"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
